engine/test_pgns/invalid/move_before_q.pgn
[GameType "Base+MLP"]
[Date "2023.03.24"]
[Event ""]
[Site ""]
[Round ""]
[White "noi"]
[Black "noi"]
[Result "InProgress"]

1. wB1
2. bL wB1/
3. wB1 bL
